# PasswordManager

./: .gitignore  CMakeLists.txt  Makefile  database.cpp  database.h  database_manager.cpp  database_manager.h  encryption.cpp  encryption.h  hash.cpp  hash.h  main.cpp  passman.cpp  passman.h  passman.pro  password_item.cpp  password_item.h
en/: main
